<resources>
	<string name="app_name">Pie Launcher</string>
	<string name="tip_loading">Loading…</string>
	<string name="tip_drag_to_order">Drag to arrange, circle to change order</string>
	<string name="tip_remove_icon">Remove icon from pie menu</string>
	<string name="tip_remove_app">Uninstall app</string>
	<string name="preferences">Settings</string>
	<string name="welcome">Welcome!</string>
	<string name="check_these_settings">Please check the following settings:</string>
	<string name="disable_battery_optimization"><big><font color="#ffffff">Disable battery optimizations</font></big>\nSaves energy and makes this launcher work faster</string>
	<string name="make_default_launcher"><big><font color="#ffffff">Make default launcher</font></big>\nAvoids returning to your previous launcher</string>
	<string name="category_home">Home</string>
	<string name="orientation">Orientation</string>
	<string name="orientation_portrait">Portrait (Default)</string>
	<string name="orientation_landscape">Landscape</string>
	<string name="orientation_user">Auto</string>
	<string name="darken_background">Darken background</string>
	<string name="darken_background_yes">Heavy (Default)</string>
	<string name="darken_background_light">Light</string>
	<string name="darken_background_no">None</string>
	<string name="blur_background">Blur background</string>
	<string name="background_blur_radius_medium">Medium</string>
	<string name="background_blur_radius_heavy">Heavy</string>
	<string name="background_blur_radius_none">No (Default)</string>
	<string name="blur_menu">Blur menu</string>
	<string name="blur_menu_yes">Yes (Default)</string>
	<string name="blur_menu_no">No</string>
	<string name="dead_zone">Ignore touches</string>
	<string name="dead_zone_none">No restriction</string>
	<string name="dead_zone_top">At the top</string>
	<string name="dead_zone_bottom">At the bottom</string>
	<string name="dead_zone_top_bottom">At the top and bottom</string>
	<string name="dead_zone_all">Around all edges (Default)</string>
	<string name="expand_panel_in_dead_zone">Open notification panel at edge</string>
	<string name="expand_panel_in_dead_zone_yes">Yes (Default)</string>
	<string name="expand_panel_in_dead_zone_no">No</string>
	<string name="immersive_mode">Immersive mode</string>
	<string name="immersive_mode_full">Hide status and navigation bar</string>
	<string name="immersive_mode_status_bar">Hide system bar only</string>
	<string name="immersive_mode_navigation_bar">Hide navigation bar only</string>
	<string name="immersive_mode_disabled">Show status and navigation bar (Default)</string>
	<string name="animate_in_out">Animate appearance/disappearance</string>
	<string name="animate_in_out_yes">Yes (Default)</string>
	<string name="animate_in_out_no">No</string>
	<string name="haptic_feedback">Haptic feedback</string>
	<string name="haptic_feedback_follow_system">Follow system settings (Default)</string>
	<string name="haptic_feedback_disable_launch">Disable launch feedback only</string>
	<string name="haptic_feedback_disable_all">Disable</string>
	<string name="category_app_drawer">App Drawer</string>
	<string name="home_button_opens_drawer">Home button opens app drawer</string>
	<string name="home_button_opens_drawer_yes">Yes (Default)</string>
	<string name="home_button_opens_drawer_no">No</string>
	<string name="open_list_with">Opens with</string>
	<string name="open_list_with_tap">A tap on the home screen (Default)</string>
	<string name="open_list_with_any_touch">Any touch no matter how long</string>
	<string name="open_list_with_long_press">A long press</string>
	<string name="open_list_with_double_tap">A double tap</string>
	<string name="open_list_with_two_finger_tap">A two-finger tap</string>
	<string name="open_list_with_four_finger_tap">A four-finger tap</string>
	<string name="open_list_with_icon">Icon in pie menu</string>
	<string name="list_animation_appearance">Animation on appearance</string>
	<string name="list_animation_appearance_slide">Slide in (Standard)</string>
	<string name="list_animation_appearance_fade">Fade in</string>
	<string name="display_keyboard">Show keyboard automatically</string>
	<string name="display_keyboard_yes">Yes (Default)</string>
	<string name="display_keyboard_no">No</string>
	<string name="space_action">Space at the end of search input</string>
	<string name="space_action_move_selection">Moves selection (Default)</string>
	<string name="space_action_double_launch">Press twice to launch app</string>
	<string name="auto_launch_matching">Auto start perfect matches</string>
	<string name="auto_launch_matching_yes">Yes</string>
	<string name="auto_launch_matching_no">No (Default)</string>
	<string name="search_strictness">App search</string>
	<string name="search_strictness_hamming">Name resembles search term (Default)</string>
	<string name="search_strictness_contains">Name contains search term</string>
	<string name="search_strictness_starts_with">Name starts with search term</string>
	<string name="search_parameter">Search by</string>
	<string name="search_parameter_app_label">App name (Default)</string>
	<string name="search_parameter_package_name">Package name</string>
	<string name="app_sorting">Sort apps by</string>
	<string name="app_sorting_alphabetical">Name (Default)</string>
	<string name="app_sorting_frecency">Frecency</string>
	<string name="show_app_names">Show app names</string>
	<string name="show_app_names_always">Always</string>
	<string name="show_app_names_search">When searching (Default)</string>
	<string name="private_space_not_available">Private Space not available</string>
	<string name="private_space_unlocking">Unlocking Private Space…</string>
	<string name="private_space_unlock_failed">Unable to unlock Private Space</string>
	<string name="show_app_names_never">Never</string>
	<string name="exclude_pie">Hide home icons from app drawer</string>
	<string name="exclude_pie_yes">From primary menu</string>
	<string name="exclude_pie_all">From both menus</string>
	<string name="exclude_pie_no">No (Default)</string>
	<string name="split_pie_menu">Separate top/bottom pie menus</string>
	<string name="circle_swaps_menus">Circling swaps menus</string>
	<string name="alternate_menu_none">No (Default)</string>
	<string name="alternate_menu_secondary">Secondary menu</string>
	<string name="alternate_menu_all_apps">All apps</string>
	<string name="alternate_menu_last_used">Last used apps</string>
	<string name="icon_press">Long press</string>
	<string name="icon_press_default">Adds app to the pie menu (Default)</string>
	<string name="icon_press_longer">Requires prolonged pressing</string>
	<string name="icon_press_menu">Show pop-up menu</string>
	<string name="icon_lock_menu">Disabled</string>
	<string name="category_advanced">Advanced</string>
	<string name="icon_pack">Icon pack</string>
	<string name="icon_pack_default">System (Default)</string>
	<string name="show_hidden_apps"><big><font color="#ffffff">Hidden apps</font></big>\nList of hidden apps</string>
	<string name="use_light_dialogs">Invert dialog colors</string>
	<string name="use_light_dialogs_yes">Yes</string>
	<string name="use_light_dialogs_no">No (Default)</string>
	<string name="force_relaunch">Do not reuse home screen</string>
	<string name="force_relaunch_yes">Yes</string>
	<string name="force_relaunch_no">No (Default)</string>
	<string name="skip">Skip</string>
	<string name="reset">Reset</string>
	<string name="edit_app">Edit app</string>
	<string name="edit_pie_menu">Edit pie menu</string>
	<string name="add_to_pie_menu">Add to pie menu</string>
	<string name="change_icon">Change icon</string>
	<string name="hidden_apps">Hidden apps</string>
	<string name="hide_app">Hide app</string>
	<string name="show_app_info">Show app info</string>
	<string name="no_hidden_apps">No hidden apps</string>
	<string name="unhide_app">Unhide app</string>
	<string name="start_app">Start app</string>
	<string name="want_to_hide_app">Do you want to hide this app?</string>
	<string name="want_to_restore_icon">Remove icon mapping?</string>
	<string name="all">All</string>
	<string name="app_icon">App icon</string>
	<string name="user_profile_locked">User profile locked</string>
	<string name="activity_not_enabled">Activity not enabled\n</string>
	<string name="added_to_home_screen">Added %1$s</string>
	<string name="removed_from_home_screen">Removed %1$s</string>
</resources>
